--- a/gaussian.ipynb
+++ b/gaussian.ipynb
@@ -217,8 +217,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FINAL ATTEMPT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,14 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cr/d_063phd0572skkv1bwmdz6h0000gn/T/ipykernel_41013/1150148028.py:7: RuntimeWarning: divide by zero encountered in divide\n",
+      "/opt/homebrew/lib/python3.11/site-packages/rasterio/__init__.py:304: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.\n",
+      "  dataset = DatasetReader(path, driver=driver, sharing=sharing, **kwargs)\n",
+      "/var/folders/cr/d_063phd0572skkv1bwmdz6h0000gn/T/ipykernel_46839/1150148028.py:7: RuntimeWarning: divide by zero encountered in divide\n",
       "  ndvi =(nir.astype(float)-red.astype(float)/(nir+red))\n"
      ]
     },
@@ -269,7 +279,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -386,62 +396,6 @@
     "ax.set_ylabel('Frequency')\n",
     "ax.set_title(r'Histogram of NDVI $\\mu={:.2f}$, $a={:.2f}$'.format(mean, std))\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/lib/python3.11/site-packages/numpy/lib/function_base.py:2699: RuntimeWarning: invalid value encountered in subtract\n",
-      "  X -= avg[:, None]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ndvi = ndvi.reshape((ndvi.shape[0], ndvi.shape[1]))\n",
-    "mean = np.mean(ndvi)\n",
-    "covariance = np.cov(ndvi.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = np.meshgrid(np.linspace(0, ndvi.shape[1], ndvi.shape[1]), np.linspace(0, ndvi.shape[0], ndvi.shape[0]))\n",
-    "pos = np.dstack((x,y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 52900 into shape (1,1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rc \u001b[39m=\u001b[39m multivariate_normal(mean\u001b[39m=\u001b[39;49mmean,cov\u001b[39m=\u001b[39;49mcovariance)\n\u001b[1;32m      2\u001b[0m z\u001b[39m=\u001b[39mrv\u001b[39m.\u001b[39mpdf(pos)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/stats/_multivariate.py:393\u001b[0m, in \u001b[0;36mmultivariate_normal_gen.__call__\u001b[0;34m(self, mean, cov, allow_singular, seed)\u001b[0m\n\u001b[1;32m    388\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, mean\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, cov\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, allow_singular\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, seed\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    389\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Create a frozen multivariate normal distribution.\u001b[39;00m\n\u001b[1;32m    390\u001b[0m \n\u001b[1;32m    391\u001b[0m \u001b[39m    See `multivariate_normal_frozen` for more information.\u001b[39;00m\n\u001b[1;32m    392\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 393\u001b[0m     \u001b[39mreturn\u001b[39;00m multivariate_normal_frozen(mean, cov,\n\u001b[1;32m    394\u001b[0m                                       allow_singular\u001b[39m=\u001b[39;49mallow_singular,\n\u001b[1;32m    395\u001b[0m                                       seed\u001b[39m=\u001b[39;49mseed)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/stats/_multivariate.py:834\u001b[0m, in \u001b[0;36mmultivariate_normal_frozen.__init__\u001b[0;34m(self, mean, cov, allow_singular, seed, maxpts, abseps, releps)\u001b[0m\n\u001b[1;32m    791\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Create a frozen multivariate normal distribution.\u001b[39;00m\n\u001b[1;32m    792\u001b[0m \n\u001b[1;32m    793\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    830\u001b[0m \n\u001b[1;32m    831\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    832\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dist \u001b[39m=\u001b[39m multivariate_normal_gen(seed)\n\u001b[1;32m    833\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdim, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmean, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcov_object \u001b[39m=\u001b[39m (\n\u001b[0;32m--> 834\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dist\u001b[39m.\u001b[39;49m_process_parameters(mean, cov, allow_singular))\n\u001b[1;32m    835\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mallow_singular \u001b[39m=\u001b[39m allow_singular \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcov_object\u001b[39m.\u001b[39m_allow_singular\n\u001b[1;32m    836\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m maxpts:\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/stats/_multivariate.py:410\u001b[0m, in \u001b[0;36mmultivariate_normal_gen._process_parameters\u001b[0;34m(self, mean, cov, allow_singular)\u001b[0m\n\u001b[1;32m    403\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_parameters_Covariance(mean, cov)\n\u001b[1;32m    404\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    405\u001b[0m     \u001b[39m# Before `Covariance` classes were introduced,\u001b[39;00m\n\u001b[1;32m    406\u001b[0m     \u001b[39m# `multivariate_normal` accepted plain arrays as `cov` and used the\u001b[39;00m\n\u001b[1;32m    407\u001b[0m     \u001b[39m# following input validation. To avoid disturbing the behavior of\u001b[39;00m\n\u001b[1;32m    408\u001b[0m     \u001b[39m# `multivariate_normal` when plain arrays are used, we use the\u001b[39;00m\n\u001b[1;32m    409\u001b[0m     \u001b[39m# original input validation here.\u001b[39;00m\n\u001b[0;32m--> 410\u001b[0m     dim, mean, cov \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_process_parameters_psd(\u001b[39mNone\u001b[39;49;00m, mean, cov)\n\u001b[1;32m    411\u001b[0m     \u001b[39m# After input validation, some methods then processed the arrays\u001b[39;00m\n\u001b[1;32m    412\u001b[0m     \u001b[39m# with a `_PSD` object and used that to perform computation.\u001b[39;00m\n\u001b[1;32m    413\u001b[0m     \u001b[39m# To avoid branching statements in each method depending on whether\u001b[39;00m\n\u001b[1;32m    414\u001b[0m     \u001b[39m# `cov` is an array or `Covariance` object, we always process the\u001b[39;00m\n\u001b[1;32m    415\u001b[0m     \u001b[39m# array with `_PSD`, and then use wrapper that satisfies the\u001b[39;00m\n\u001b[1;32m    416\u001b[0m     \u001b[39m# `Covariance` interface, `CovViaPSD`.\u001b[39;00m\n\u001b[1;32m    417\u001b[0m     psd \u001b[39m=\u001b[39m _PSD(cov, allow_singular\u001b[39m=\u001b[39mallow_singular)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/stats/_multivariate.py:464\u001b[0m, in \u001b[0;36mmultivariate_normal_gen._process_parameters_psd\u001b[0;34m(self, dim, mean, cov)\u001b[0m\n\u001b[1;32m    462\u001b[0m \u001b[39mif\u001b[39;00m dim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m    463\u001b[0m     mean \u001b[39m=\u001b[39m mean\u001b[39m.\u001b[39mreshape(\u001b[39m1\u001b[39m)\n\u001b[0;32m--> 464\u001b[0m     cov \u001b[39m=\u001b[39m cov\u001b[39m.\u001b[39;49mreshape(\u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m)\n\u001b[1;32m    466\u001b[0m \u001b[39mif\u001b[39;00m mean\u001b[39m.\u001b[39mndim \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mor\u001b[39;00m mean\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m] \u001b[39m!=\u001b[39m dim:\n\u001b[1;32m    467\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mArray \u001b[39m\u001b[39m'\u001b[39m\u001b[39mmean\u001b[39m\u001b[39m'\u001b[39m\u001b[39m must be a vector of length \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m\n\u001b[1;32m    468\u001b[0m                      dim)\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 52900 into shape (1,1)"
-     ]
-    }
-   ],
-   "source": [
-    "rc = multivariate_normal(mean=mean,cov=covariance)\n",
-    "z=rv.pdf(pos)"
    ]
   }
  ],
